# MineClone

./: .clang-format  .gitmodules  CMakeLists.txt
Client/: CMakeLists.txt
Client/include/MineClone/: Client.hpp  Common.hpp  Utility.hpp
Client/include/MineClone/GFX/: Game.hpp  Graphics.hpp  Shader.hpp  SwapChain.hpp  VulkanContext.hpp
Client/include/MineClone/Game/: MineCloneGame.hpp
Client/shader/: CMakeLists.txt  vertex.vert
Client/src/: Client.cpp
Client/src/GFX/: Game.cpp  Graphics.cpp  Shader.cpp  SwapChain.cpp  VulkanContext.cpp
Client/src/Game/: MineCloneGame.cpp
Executable/: CMakeLists.txt
Executable/src/: Main.cpp
Libraries/: CMakeLists.txt
cmake/: Resources.cmake
